feat: work on projects and cv page, update some components

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -5,88 +5,63 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
 <BaseLayout title="Resume" sideBarActiveItemID="cv">
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Profile</div>
+    <div class="text-3xl w-full font-bold">Profil</div>
   </div>
 
   <div class="mb-10 text-justify">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    Ingénieur informatique avec plus de 5 ans d'expérience en développement logiciel (C# .NET, Angular). 
+    Spécialisé dans la gestion de projets complexes en environnement Agile et dans des secteurs stratégiques 
+    comme la santé, la finance et l’éducation. 
+    Passionné par l'innovation technologique, je cherche à apporter des solutions efficaces et adaptées pour améliorer 
+    la performance des systèmes.
   </div>
 
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Education</div>
-  </div>
-
-  <div class="time-line-container grid gap-4 mb-10">
-    <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
-    />
-    <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
-    />
-  </div>
-
-  <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Experience</div>
+    <div class="text-3xl w-full font-bold">Expériences professionnelles</div>
   </div>
 
   <div class="time-line-container mb-10">
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Software Engineer"
+      subtitle="Mai 2023 – Aujourd'hui",
+      location="Luxembourg Institute of Health"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+    Au sein de l'équipe de développement d'une institution de santé, j'ai eu l'opportunité de travailler sur des 
+    projets de grande envergure visant à améliorer la gestion des données médicales. Travaillant dans un environnement 
+    multiculturel, j'ai contribué à la conception et au déploiement de solutions logicielles visant à améliorer la 
+    performance des services hospitaliers tout en garantissant la conformité aux normes de sécurité.
     </TimeLineElement>
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Software Engineer"
+      subtitle="Août 2022 – Mai 2023",
+      location="Crédit Mutuel"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+    Dans un contexte où la sécurité des données était primordiale, j'ai intégré une équipe dédiée à la transformation 
+    des processus internes en les rendant plus flexibles et conformes aux exigences des utilisateurs. Grâce à l'architecture 
+    de microservices, j'ai participé à la migration de systèmes traditionnels vers des solutions cloud-native, tout en 
+    assurant un haut niveau de sécurité pour la gestion des documents sensibles.
     </TimeLineElement>
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Software Engineer"
+      subtitle="Septembre 2019 – Août 2022",
+      location="Université de Strasbourg"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+    En collaboration avec des équipes pédagogiques et administratives, j'ai conçu des solutions logicielles permettant 
+    d'optimiser l'interopérabilité entre différents systèmes de gestion des étudiants et du personnel. Ce projet visait 
+    à faciliter l'échange sécurisé des données au sein de l'université et à améliorer l'efficacité des services internes, 
+    tout en réduisant le temps de réponse des applications web grâce à l'intégration de solutions cloud.
     </TimeLineElement>
   </div>
 
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Certifications</div>
+    <div class="text-3xl w-full font-bold">Formation</div>
   </div>
 
-  <ul class="list-disc mx-6 mb-10 grid gap-2">
-    <li>
-      <a href="#" target="_blank"> Certification Name (with link)</a>
-    </li>
-    <li>
-      <a href="#" target="_blank"> Certification Name (with link)</a>
-    </li>
-  </ul>
-
-  <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Skills</div>
+  <div class="time-line-container grid gap-4 mb-10">
+    <TimeLineElement
+      title="Diplôme d'Ingénieur Informatique"
+      subtitle="2022",
+      location="Conservatoire National des Arts et Métiers"
+    />
   </div>
-
-  <ul class="list-disc md:columns-5 columns-2 mx-6">
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-  </ul>
 </BaseLayout>
