--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -1,8 +1,8 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-import HorizontalCard from "../components/HorizontalCard.astro";
+import BaseLayout from "../../layouts/BaseLayout.astro";
+import HorizontalCard from "../../components/HorizontalCard.astro";
 import { getCollection } from "astro:content";
-import createSlug from "../lib/createSlug";
+import createSlug from "../../lib/createSlug";
 
 const posts = (await getCollection("blog")).sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
 
@@ -11,40 +11,38 @@ const last_posts = posts.slice(0, 3);
 
 <BaseLayout sideBarActiveItemID="home">
   <div class="pb-12 mt-5">
-    <div class="text-xl py-1">Salut 👋</div>
-    <div class="text-5xl font-bold">Je suis Adam El Kadaoui</div>
+    <div class="text-xl py-1">Hey there 👋</div>
+    <div class="text-5xl font-bold">I'm Adam El Kadaoui</div>
     <div class="text-3xl py-3 font-bold">Software Engineer</div>
     <div class="py-2">
       <p class="text-lg">
-        Je conçois et mets en œuvre des solutions numériques robustes, évolutives et innovantes qui génèrent de la 
-        valeur pour les entreprises et améliorent l'engagement des utilisateurs. Avec un fort accent sur la performance, 
-        la maintenabilité et le design centré sur l'utilisateur, j'aide les organisations à accélérer leur transformation 
-        numérique et à atteindre leurs objectifs stratégiques.
+        I design and implement robust, scalable, and innovative digital solutions that drive business value and enhance user engagement.  
+        With a strong focus on performance, maintainability, and user-centric design, I help organizations accelerate their digital transformation and achieve their strategic goals.
       </p>
     </div>
   </div>
 
   <div>
-    <div class="text-3xl w-full font-bold mb-2">Mes derniers projets {"</>"}</div>
+    <div class="text-3xl w-full font-bold mb-2">My last projects {"</>"}</div>
   </div>
 
   <HorizontalCard
-    title="Projet démo 1"
+    title="Demo Project 1"
     img="/post_img.webp"
     desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
     url="#"
-    badge="NOUVEAU"
+    badge="NEW"
   />
   <div class="divider my-0"></div>
   <HorizontalCard
-    title="Projet démo 2"
+    title="Demo Project 2"
     img="/post_img.webp"
     desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
     url="#"
   />
   <div class="divider my-0"></div>
   <HorizontalCard
-    title="Projet démo 3"
+    title="Demo Project 3"
     img="/post_img.webp"
     desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
     url="#"
@@ -52,7 +50,7 @@ const last_posts = posts.slice(0, 3);
   />
 
   <div>
-    <div class="text-3xl w-full font-bold mb-5 mt-10">Derniers articles du blog</div>
+    <div class="text-3xl w-full font-bold mb-5 mt-10">Latest from blog</div>
   </div>
 
   {
