--- a/src/pages/en/projects.astro
+++ b/src/pages/en/projects.astro
@@ -1,6 +1,6 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-import HorizontalCard from "../components/HorizontalCard.astro";
+import BaseLayout from "../../layouts/BaseLayout.astro";
+import HorizontalCard from "../../components/HorizontalCard.astro";
 ---
 
 <BaseLayout title = "Projets" sideBarActiveItemID="projects">
@@ -11,9 +11,9 @@ import HorizontalCard from "../components/HorizontalCard.astro";
   <HorizontalCard
     title="Alliance Services Propreté"
     img="/post_img.webp"
-    desc="Développement d'un site web moderne, intuitif et responsive pour la société Alliance Services Propreté."
+    desc="Development of a modern, intuitive and responsive website for Alliance Services Propreté company."
     stack="🅰️ Angular 18 • 🔁 RxJS • 🎨 Bootstrap 5"
     url="https://allianceservicesproprete.github.io"
-    badge="Nouveau"
+    badge="New"
   />
 </BaseLayout>
