feat: add avatar and change intro text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,10 +16,9 @@ const last_posts = posts.slice(0, 3);
     <div class="text-3xl py-3 font-bold">Software Engineer</div>
     <div class="py-2">
       <p class="text-lg">
-        Je conçois et mets en œuvre des solutions numériques robustes, évolutives et innovantes qui génèrent de la 
-        valeur pour les entreprises et améliorent l'engagement des utilisateurs. Avec un fort accent sur la performance, 
-        la maintenabilité et le design centré sur l'utilisateur, j'aide les organisations à accélérer leur transformation 
-        numérique et à atteindre leurs objectifs stratégiques.
+        Je travaille à la création de logiciels qui résolvent des problèmes de manière simple et je partage ce que j'apprends en cours de route. 
+        J'aime le minimalisme, l'Open-Source et je suis un grand passionné de sport, notamment le football et la course à pied. 
+        Un esprit sain dans un corps sain !
       </p>
     </div>
   </div>
