feat: migrate some articles from previous website to astro

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,6 +1,7 @@
 ---
-import { CollectionEntry, getCollection } from "astro:content";
-import { BlogSchema } from "../../content/config";
+import type { CollectionEntry } from "astro:content";
+import { getCollection } from "astro:content";
+import type { BlogSchema } from "../../content/config";
 import PostLayout from "../../layouts/PostLayout.astro";
 import createSlug from "../../lib/createSlug"
 
@@ -27,8 +28,8 @@ const { Content } = await entry.render();
   pubDate={post.pubDate}
   heroImage={post.heroImage}
   updatedDate={post.updatedDate}
-  badge={post.badge}
   tags={post.tags}
 >
   <Content />
 </PostLayout>
+
