--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -8,11 +8,10 @@ export interface Props extends BlogSchema {}
 
 const { title, description, pubDate, updatedDate, heroImage, badge, tags = [] } = Astro.props;
 dayjs.extend(localizedFormat);
-const displayDate = dayjs(pubDate).format("ll")
+const displayDate = dayjs(pubDate).format("ll");
 import { Image } from "astro:assets";
 ---
-
-<BaseLayout title={title} description={description} image={heroImage}, ogType="article">
+<BaseLayout title={title} description={description} image={heroImage} ogType="article">
   <main class="md:flex md:justify-center">
     <article class="prose prose-lg max-w-[750px] prose-img:mx-auto">
       {heroImage && <Image width={750} height={422} format="webp" src={heroImage} alt={title} class="w-full mb-6" />}
@@ -40,4 +39,21 @@ import { Image } from "astro:assets";
       <slot />
     </article>
   </main>
+
+  <!-- Bouton "Retour en haut" -->
+  <div class="mx-auto">
+    <div class="flex flex-nowrap justify-end w-full">
+      <button
+      class="relative group w-fit flex items-end pr-3 pl-8 py-1.5 flex-nowrap rounded bg-zinc-100 dark:bg-zinc-900 border border-black/15 dark:border-white/20 hover:bg-zinc-200 dark:hover:bg-zinc-800 text-white transition-all duration-300 ease-in-out"
+      id="back-to-top"
+      onclick="window.scrollTo({ top: 0, behavior: 'smooth' })"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="arrow-motion absolute top-1/2 left-2 -translate-y-1/2 size-4 stroke-2 fill-none stroke-current rotate-90">
+          <line x1="5" y1="12" x2="19" y2="12" class="translate-x-2 group-hover:translate-x-0 scale-x-0 group-hover:scale-x-100 transition-transform duration-300 ease-in-out"></line>
+          <polyline points="12 5 5 12 12 19" class="translate-x-1 group-hover:translate-x-0 transition-transform duration-300 ease-in-out"></polyline>
+        </svg>
+        <div class="text-sm">Retour en haut</div>
+      </button>
+    </div>
+  </div>
 </BaseLayout>
