--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,12 +28,14 @@ const last_posts = posts.slice(0, 3);
   </div>
 
   <HorizontalCard
-    title="Projet démo 1"
+    title="Alliance Services Propreté"
     img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-    url="#"
-    badge="NOUVEAU"
+    desc="Développement d'un site web moderne, intuitif et responsive pour la société Alliance Services Propreté."
+    stack="🅰️ Angular 18 • 🔁 RxJS • 🎨 Bootstrap 5"
+    url="https://allianceservicesproprete.github.io"
+    badge="Nouveau"
   />
+
   <div class="divider my-0"></div>
   <HorizontalCard
     title="Projet démo 2"
