--- a/src/pages/projects/[...page].astro
+++ b/src/pages/projects/[...page].astro
@@ -1,52 +1,40 @@
 ---
-import BaseLayout from "@layouts/BaseLayout.astro";
-import HorizontalCard from "@components/HorizontalCard.astro";
+import BaseLayout from "../../layouts/BaseLayout.astro";
+import HorizontalCard from "../../components/HorizontalCard.astro";
 import { getCollection } from "astro:content";
-import createSlug from "../../../../lib/createSlug";
+import createSlug from "../../lib/createSlug";
 
 export async function getStaticPaths({ paginate }) {
-  const all_posts = await getCollection("blog");
-  const all_tags = all_posts.flatMap((post) => {
-    return post.data.tags || [];
-  });
-
-  return all_tags.flatMap((tag) => {
-    const filtred_posts = all_posts.filter((post) => {
-      return post.data.tags?.includes(tag);
-    });
-    return paginate(filtred_posts, {
-      params: { tag },
-      pageSize: 10,
-    });
-  });
+  const projects = await getCollection("project");
+  projects.sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
+  return paginate(projects, { pageSize: 10 });
 }
 
 const { page } = Astro.props;
-const params = Astro.params;
 ---
 
-<BaseLayout title={"Blog - " + params.tag} sideBarActiveItemID="blog">
+<BaseLayout title="Projets" sideBarActiveItemID="projects">
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Blog - {params.tag}</div>
+    <div class="text-3xl w-full font-bold">Projets</div>
   </div>
+
   {
     page.data.length === 0 ? (
       <div class="bg-base-200 border-l-4 border-secondary w-full p-4 min-w-full">
-        <p class="font-bold">Pardon!</p>
-        <p>Il n'y a pas d'articles de blog à afficher pour le moment. Revenez plus tard!</p>
+        <p class="font-bold">Désolé !</p>
+        <p>Il n'y a pas de projets à afficher pour le moment. Revenez plus tard !</p>
       </div>
     ) : (
       <ul>
-        {page.data.map((post) => (
+        {page.data.map((project) => (
           <>
             <HorizontalCard
-              title={post.data.title}
-              img={post.data.heroImage}
-              desc={post.data.description}
-              url={"/blog/" + createSlug(post.data.title, post.slug)}
+              title={project.data.title}
+              img={project.data.heroImage}
+              desc={project.data.description}
+              url={"/projects/" + createSlug(project.data.title, project.slug)}
               target="_self"
-              badge={post.data.badge}
-              tags={post.data.tags}
+              tags={project.data.tags}
             />
             <div class="divider my-0" />
           </>
@@ -69,7 +57,7 @@ const params = Astro.params;
           >
             <path d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z" />
           </svg>{" "}
-          Recent posts
+          Projets récents
         </a>
       ) : (
         <div />
@@ -78,7 +66,7 @@ const params = Astro.params;
     {
       page.url.next ? (
         <a href={page.url.next} class="btn btn-ghost my-10 mx-5">
-          Older Posts{" "}
+          Projets plus anciens{" "}
           <svg
             class="h-6 w-6 fill-current md:h-8 md:w-8"
             xmlns="http://www.w3.org/2000/svg"
