--- a/src/pages/blog/tag/[tag]/[...page].astro
+++ b/src/pages/blog/tag/[tag]/[...page].astro
@@ -69,7 +69,7 @@ const params = Astro.params;
           >
             <path d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z" />
           </svg>{" "}
-          Recent posts
+          Articles récents
         </a>
       ) : (
         <div />
@@ -78,7 +78,7 @@ const params = Astro.params;
     {
       page.url.next ? (
         <a href={page.url.next} class="btn btn-ghost my-10 mx-5">
-          Older Posts{" "}
+          Anciens articles{" "}
           <svg
             class="h-6 w-6 fill-current md:h-8 md:w-8"
             xmlns="http://www.w3.org/2000/svg"
