feat: improve optimisation and speed rendering

--- a/src/components/HorizontalShopItem.astro
+++ b/src/components/HorizontalShopItem.astro
@@ -21,6 +21,7 @@ import { Image } from "astro:assets";
       {
         img && (
           <Image
+            loading="eager"
             width={750}
             height={422}
             format="webp"
