--- a/src/layouts/StoreItemLayout.astro
+++ b/src/layouts/StoreItemLayout.astro
@@ -29,7 +29,7 @@ import { Image } from "astro:assets";
     <article class="prose prose-lg max-w-[750px] prose-img:mx-auto">
       {
         heroImage && (
-          <Image width={750} height={422} format="webp" src={heroImage} alt={title} class="w-full mb-6" />
+          <Image loading="eager" width={750} height={422} format="webp" src={heroImage} alt={title} class="w-full mb-6" />
         )
       }
       <div class="">
