--- a/src/pages/projects/tag/[tag]/[...page].astro
+++ b/src/pages/projects/tag/[tag]/[...page].astro
@@ -25,7 +25,7 @@ const { page } = Astro.props;
 const params = Astro.params;
 ---
 
-<BaseLayout title={"Projets - " + params.tag} sideBarActiveItemID="blog">
+<BaseLayout title={"Projets - " + params.tag} sideBarActiveItemID="projects">
   <div class="mb-5">
     <div class="text-3xl w-full font-bold">Projets - {params.tag}</div>
   </div>
