--- a/src/components/SideBarMenu.astro
+++ b/src/components/SideBarMenu.astro
@@ -12,7 +12,7 @@ const activeClass = "bg-base-300"; // For primary color replace with `active` cl
     <li>
         <a
             class="py-3 text-base"
-            href="mailto:contact.adam.elkadaoui@gmail.com"
+            href="mailto:adam.elkadaoui@gmail.com"
             target="_blank"
             referrerpolicy="no-referrer-when-downgrade">Contact</a
         >
