refactor: clean code

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,13 +1,5 @@
----
-const today = new Date();
----
-
 <footer class="footer footer-center block mb-5 pt-10">
-  <div class="pb-2">
-    &copy; {today.getFullYear()} Adam El Kadaoui
-  </div>
-  <div class="inline opacity-75">
-    Developed by <a href="https://adamelkadaoui.github.io" target="_blank" class="font-bold">Adam El Kadaoui</a> using
+  <div class="inline opacity-75 font-bold">
+    Developed with ❤️ by <a href="https://adamelkadaoui.github.io" target="_blank">Adam El Kadaoui</a>
   </div>
 </footer>
-<style></style>
