--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,15 +13,10 @@ const last_projects = projects.slice(0, 3);
 
 <BaseLayout sideBarActiveItemID="home">
   <div class="pb-12 mt-5">
-    <div class="text-xl py-1">Salut 👋</div>
-    <div class="text-5xl font-bold">Je suis Adam El Kadaoui</div>
-    <div class="text-3xl py-3 font-bold">Software Engineer</div>
-    <div class="py-2">
-      <p class="text-lg">
-        Je travaille à la création de logiciels qui résolvent des problèmes de manière simple et je partage ce que j'apprends en cours de route. 
-        J'aime le minimalisme, l'Open-Source et je suis un grand passionné de sport, notamment le football et la course à pied. 
-        Un esprit sain dans un corps sain !
-      </p>
+    <div class="flex items-center space-x-3">
+      <div class="text-5xl font-bold">Adam El Kadaoui</div>
+      <span class="text-4xl hidden sm:inline self-end">|</span>
+      <span class="text-4xl text-blue-600 hidden sm:inline self-end">Software Engineer</span>
     </div>
   </div>
 
