--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,9 +14,9 @@ const last_projects = projects.slice(0, 3);
 <BaseLayout sideBarActiveItemID="home">
   <div class="pb-12 mt-5">
     <div class="flex items-center space-x-3">
-      <div class="text-5xl font-bold">Adam El Kadaoui</div>
+      <div class="text-5xl hidden sm:inline font-bold">Adam El Kadaoui</div>
       <span class="text-4xl hidden sm:inline self-end">|</span>
-      <span class="text-4xl text-blue-600 hidden sm:inline self-end">Software Engineer</span>
+      <span class="text-4xl text-blue-600 sm:inline self-end">Software Engineer</span>
     </div>
   </div>
 
