--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ const last_projects = projects.slice(0, 3);
     <div class="flex items-center space-x-3">
       <div class="text-5xl hidden sm:inline font-bold">Adam El Kadaoui</div>
       <span class="text-4xl hidden sm:inline self-end">|</span>
-      <span class="text-4xl text-blue-600 sm:inline self-end">Software Engineer</span>
+      <span class="text-4xl hidden text-blue-600 sm:inline self-end">Software Engineer</span>
     </div>
   </div>
 
